--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ut-rpc",
   "version": "5.0.3",
-  "description": "UT RPC module.",
+  "description": "UT RPC module",
   "main": "index.js",
   "dependencies": {
     "mux-demux": "~3.7.9",
