--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "mux-demux": "~3.7.9",
     "through2": "~1.1.1"
   },
+  "devDependencies": {
+    "ut-tools": "~0.5.1"
+  },
   "publishConfig": {
     "registry": "http://npm.softwaregroup-bg.com:5001"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "ut-lint .",
+    "test": "npm run lint"
   },
   "repository": {
     "type": "git",
