#BR-13 Update ut-tools version and integration

--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "through2": "~1.1.1"
   },
   "devDependencies": {
-    "ut-tools": "~0.5.1"
+    "ut-tools": "~1.0.0"
   },
   "publishConfig": {
     "registry": "http://npm.softwaregroup-bg.com:5001"
   },
   "scripts": {
     "lint": "ut-lint .",
-    "test": "npm run lint"
+    "pre-commit": "npm run lint",
+    "pre-release": "ut-pre-release",
+    "release": "ut-release",
+    "post-release": "ut-post-release"
   },
   "repository": {
     "type": "git",
