--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ut-rpc",
-  "version": "5.3.15",
+  "version": "6.0.0-ut6.1",
   "description": "UT RPC module",
   "main": "index.js",
   "dependencies": {
@@ -8,7 +8,7 @@
     "through2": "2.0.3"
   },
   "devDependencies": {
-    "ut-tools": "^5.11.1"
+    "ut-tools": "^5.29.14"
   },
   "scripts": {
     "lint": "ut-lint .",
